--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Jarvis Android</title>
+  <title>JARVIS</title>
+  <style>
+    
+  </style>
 </head>
 <body>
+<button click = "mf()" >button</button>
   <h1>Hello, World!.</h1>
+  <script>
+    mf():
+    alert("hi")
+  </script>
 </body>
 </html>
