--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html>
 <head>
   <title>JARVIS</title>
-  <style>
-    
-  </style>
 </head>
 <body>
-<button click = "mf()" >button</button>
-  <h1>Hello, World!.</h1>
+  <button onclick="mf()">Click Me</button>
+  <h1>Hello, World!</h1>
+
   <script>
-    mf():
-    alert("hi")
+    function mf() {
+      alert("Hi");
+    }
   </script>
 </body>
 </html>
