--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <p>Watch how Jarvis interacts in real-time:</p>
       <div class="video-container">
         <video controls>
-          <source src="demo-video.mp4" type="video/mp4">
+          <source src="Demo.mlt" type="video/mlt">
           Your browser does not support the video tag.
         </video>
       </div>
@@ -101,10 +101,10 @@
     <div class="panel">
       <p><strong>Installation Process:</strong></p>
       <ul>
-        <li>Download Python 3.10+ from <a href="https://python.org" target="_blank">python.org</a></li>
+        <li>Download Python 3.10+ from <a href="https://python.org" target="_blank">Python</a></li>
         <li>Ensure "Add Python to PATH" is checked during installation</li>
         <li>Open terminal/CMD and run: <code>pip install -r requirements.txt</code></li>
-        <li>Verify installation: <code>python --version</code></li>
+        <li>Verify installation in Windows PowerShell or in other terminal: <code>python --version</code></li>
       </ul>
     </div>
 
