--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>JARVIS Dashboard</title>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body aria-label="JARVIS Dashboard" tabindex="0">
+  <script src="script.js"></script>
   <div class="overlay" id="overlay" onclick="closeSettings()"></div>
 
   <div class="settings">
