--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>JARVIS Dashboard</title>
    <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 </head>
 <body aria-label="JARVIS Dashboard" tabindex="0">
-  <script src="script.js"></script>
+  
   <div class="overlay" id="overlay" onclick="closeSettings()"></div>
 
   <div class="settings">
