--- a/index.html
+++ b/index.html
@@ -2,252 +2,220 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>JARVIS Dashboard</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background: #111;
-      color: #eee;
-    }
-
-    h1, h2, h3 {
-      text-align: center;
-      color: #fff;
-    }
-
-    /* Overlay for background blur */
-    .overlay {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.6);
-      display: none;
-      z-index: 90;
-    }
-
-    /* Settings Panel (Right Side Drawer) */
-    .settings-panel {
-      position: fixed;
-      top: 0;
-      right: -320px;
-      width: 300px;
-      height: 100%;
-      background: #222;
-      box-shadow: -5px 0 15px rgba(0,0,0,0.6);
-      padding: 20px;
-      transition: right 0.4s ease-in-out;
-      z-index: 100;
-    }
-    .settings-panel.open {
-      right: 0;
-    }
-
-    /* Settings Button */
-    .settings {
-      position: fixed;
-      top: 15px;
-      right: 15px;
-      z-index: 110;
-    }
-    #settingsIcon {
-      font-size: 24px;
-      background: #444;
-      border: none;
-      color: white;
-      padding: 8px 12px;
-      border-radius: 50%;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    #settingsIcon:hover {
-      background: #666;
-    }
-
-    #backArrow {
-      background: none;
-      border: none;
-      color: #fff;
-      font-size: 18px;
-      cursor: pointer;
-      margin-bottom: 15px;
-    }
-
-    .settings-panel button, 
-    .settings-panel a {
-      display: block;
-      margin: 10px 0;
-      padding: 10px;
-      width: 100%;
-      text-align: left;
-      background: #333;
-      color: #eee;
-      border: none;
-      border-radius: 6px;
-      text-decoration: none;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    .settings-panel button:hover,
-    .settings-panel a:hover {
-      background: #555;
-    }
-
-    /* Sub-tabs */
-    .sub-tabs {
-      text-align: center;
-      margin: 20px 0;
-    }
-    .sub-tabs button {
-      margin: 0 5px;
-      padding: 10px 15px;
-      border: none;
-      border-radius: 6px;
-      background: #333;
-      color: #fff;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    .sub-tabs button.active {
-      background: #7289da;
-    }
-
-    /* Tab Content */
-    .tab-content {
-      display: none;
-      padding: 20px;
-    }
-    .tab-content.active {
-      display: block;
-    }
-
-    /* Accordion */
-    .accordion {
-      background: #333;
-      color: #fff;
-      cursor: pointer;
-      padding: 12px;
-      margin: 8px 0;
-      width: 100%;
-      border: none;
-      border-radius: 6px;
-      text-align: left;
-      transition: 0.3s;
-    }
-    .accordion.active {
-      background: #555;
-    }
-    .panel {
-      max-height: 0;
-      overflow: hidden;
-      transition: max-height 0.4s ease;
-      background: #222;
-      padding: 0 12px;
-      border-radius: 6px;
-    }
-    .panel p, .panel ol, .panel ul {
-      margin: 10px 0;
-    }
-
-    /* Launch Button */
-    .center-button {
-      text-align: center;
-      margin: 30px;
-    }
-    .pulse {
-      font-size: 20px;
-      padding: 15px 25px;
-      border: none;
-      border-radius: 10px;
-      background: #7289da;
-      color: #fff;
-      cursor: pointer;
-      animation: pulseAnim 1.5s infinite;
-    }
-    @keyframes pulseAnim {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.05); }
-      100% { transform: scale(1); }
-    }
-
-    /* Feature Grid */
-    .feature-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 15px;
-      margin: 20px 0;
-    }
-    .feature-card {
-      background: #222;
-      padding: 15px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
-    }
-  </style>
-  <script>
-    // -------- Sub Tabs -------- //
-    function showSubTab(tabNumber) {
-      const tabs = document.querySelectorAll(".tab-content");
-      const buttons = document.querySelectorAll(".sub-tabs button");
-
-      tabs.forEach((tab, i) => {
-        tab.classList.remove("active");
-        buttons[i].classList.remove("active");
-      });
-
-      document.getElementById(`tab${tabNumber}`).classList.add("active");
-      document.getElementById(`subtab${tabNumber}`).classList.add("active");
-    }
-
-    // -------- Accordion -------- //
-    document.addEventListener("DOMContentLoaded", () => {
-      document.querySelectorAll(".accordion").forEach((acc) => {
-        acc.addEventListener("click", () => {
-          acc.classList.toggle("active");
-          const panel = acc.nextElementSibling;
-          if (panel.style.maxHeight) {
-            panel.style.maxHeight = null;
-          } else {
-            panel.style.maxHeight = panel.scrollHeight + "px";
-          }
-        });
-      });
-    });
-
-    // -------- Settings Panel -------- //
-    function animatedOpen() {
-      document.getElementById("settingsPanel").classList.add("open");
-      document.getElementById("overlay").style.display = "block";
-    }
-    function animatedClose() {
-      document.getElementById("settingsPanel").classList.remove("open");
-      document.getElementById("overlay").style.display = "none";
-    }
-    function closeSettings() {
-      animatedClose();
-    }
-
-    // -------- Dummy Functions -------- //
-    function toggleVoice() { alert("🎤 Voice Toggled!"); }
-    function toggleTheme() { document.body.classList.toggle("dark"); }
-    function resetSettings() { alert("🔄 Settings Reset!"); }
-    function launchJARVIS() { alert("🚀 JARVIS Launched!"); }
-  </script>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body aria-label="JARVIS Dashboard" tabindex="0">
-
-  <div class="overlay" id="overlay" onclick="closeSettings()"></div>
+  <div class="overlay" id="overlay" onclick="closeSettings()" aria-hidden="true"></div>
 
   <div class="settings">
-    <button id="settingsIcon" onclick="animatedOpen()" aria-label="Open Settings" tabindex="0">⚙️</button>
+    <button id="settingsIcon" onclick="animatedOpen()" aria-label="Open Settings Panel" tabindex="0">⚙️</button>
   </div>
 
-  <div id="settingsPanel" class="settings-panel" role="dialog" aria-modal="true" aria-label="Settings">
-    <button id="backArrow" onclick="animatedClose()" aria-label="Close Settings" tabindex="0">⬅ Back</button>
-    <h3>Settings</h3>
-    <button onclick="toggleVoice()">🎤 Toggle Voice</button>
-    <button onclick="toggleTheme()">🌗 Switch Theme</button>
-    <a href="https://www.github.com/raj0793/jarvis.ai.in" target="_blank">🔗 GitHub Repo</a>
-    <button onclick="resetSettings()">🔄 Reset Settings</button>
+  <div id="settingsPanel" class="settings-panel" role="dialog" aria-modal="true" aria-labelledby="settingsTitle">
+    <button id="backArrow" onclick="animatedClose()" aria-label="Close Settings Panel" tabindex="0">⬅ Back</button>
+    <h3 id="settingsTitle">Settings</h3>
+    <button onclick="toggleVoice()" aria-label="Toggle Voice Recognition">🎤 Toggle Voice</button>
+    <button onclick="toggleTheme()" aria-label="Toggle Light/Dark Theme">🌗 Switch Theme</button>
+    <a href="https://www.github.com/raj0793/jarvis.ai.in" target="_blank" rel="noopener" aria-label="View GitHub Repository">🔗 GitHub Repo</a>
+    <button onclick="resetSettings()" aria-label="Reset All Settings">🔄 Reset Settings</button>
   </div>
+
+  <main>
+    <h1>JARVIS Dashboard</h1>
+
+    <div class="tabs" role="tablist" aria-label="Main Navigation Tabs">
+      <button onclick="showTab(1)" class="active" role="tab" aria-selected="true" tabindex="0">Home</button>
+      <button onclick="showTab(2)" role="tab" aria-selected="false" tabindex="0">Guides</button>
+      <button onclick="showTab(3)" role="tab" aria-selected="false" tabindex="0">Troubleshoot</button>
+      <button onclick="showTab(4)" role="tab" aria-selected="false" tabindex="0">FAQ</button>
+    </div>
+
+    <!-- Tab 1: Home -->
+    <div id="tab1" class="tab-content active">
+      <h2>Welcome to JARVIS</h2>
+      <p>Your offline-first smart assistant, built for productivity, automation, and daily interaction.</p>
+
+      <div class="feature-grid">
+        <div class="feature-card">
+          <h4>🎤 Voice Assistant</h4>
+          <p>Offline voice control using pyttsx3 + SpeechRecognition</p>
+        </div>
+        <div class="feature-card">
+          <h4>Requirements</h4>
+          <p>All your needs are here</p>
+        </div>
+        <div class="feature-card">
+          <h4>🧠 Smart Memory</h4>
+          <p>JSON-based recall system for context retention</p>
+        </div>
+        <div class="feature-card">
+          <h4>🧰 Arduino Integration</h4>
+          <p>Smart home automation capabilities</p>
+        </div>
+        <div class="feature-card">
+          <h4>🎨 Multi-Platform</h4>
+          <p>GUI, CLI, and Mobile App support</p>
+        </div>
+      </div>
+
+      <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">What is JARVIS?</button>
+      <div class="panel">
+        <p>JARVIS is a modular, open-source assistant designed to run offline and handle daily tasks using speech and text commands. It's built with Python and designed for Indian households with local language support.</p>
+      </div>
+
+      <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">How to Start?</button>
+      <div class="panel">
+        <ol>
+          <li>Install Python 3.10+</li>
+          <li>Clone repo from GitHub</li>
+          <li>Install dependencies via <code>pip install -r requirements.txt</code></li>
+          <li>Run using <code>python AI_main.py</code></li>
+        </ol>
+      </div>
+
+      <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">Join Development</button>
+      <div class="panel">
+        <p>Contribute your code, ideas, or suggestions on GitHub:<br/>
+        <a href="https://github.com/raj0793/jarvis.ai.in" target="_blank">🔗 GitHub: raj0793/jarvis.ai.in</a></p>
+      </div>
+
+      <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">JARVIS Preview</button>
+      <div class="panel">
+        <p>Watch how Jarvis interacts in real-time:</p>
+        <div class="video-container">
+          <video controls>
+            <source src="demo-video.mp4" type="video/mp4" />
+            Your browser does not support the video tag.
+          </video>
+        </div>
+      </div>
+    </div>
+
+    <!-- Tab 2: Guides -->
+    <div id="tab2" class="tab-content">
+      <h2>Step-by-Step Guides</h2>
+      <p>Complete tutorials to get JARVIS running efficiently on your system.</p>
+
+      <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">Step 1: Setup Python & Dependencies</button>
+      <div class="panel">
+        <ul>
+          <li>Download Python 3.10+ from <a href="https://python.org" target="_blank">python.org</a></li>
+          <li>Ensure "Add Python to PATH" is checked during installation</li>
+          <li>Run <code>pip install -r requirements.txt</code></li>
+        </ul>
+      </div>
+
+      <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">Step 2: Clone JARVIS Repository</button>
+      <div class="panel">
+        <pre><code>git clone https://github.com/raj0793/jarvis.ai.in
+cd jarvis.ai.in</code></pre>
+        <p>Or download ZIP from GitHub and extract it.</p>
+      </div>
+
+      <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">Step 3: First Run</button>
+      <div class="panel">
+        <pre><code>python AI_main.py</code></pre>
+        <p>Say: "Hello JARVIS" or "What time is it?" to begin.</p>
+      </div>
+
+      <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">Step 4: Customization</button>
+      <div class="panel">
+        <ul>
+          <li>Edit <code>conversation.py</code></li>
+          <li>Modify <code>qna.json</code></li>
+          <li>Change settings in <code>voice_config.py</code></li>
+        </ul>
+      </div>
+
+      <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">Step 5: Advanced Features</button>
+      <div class="panel">
+        <ul>
+          <li>Configure microphone input</li>
+          <li>Set up Arduino</li>
+          <li>Train voice models</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Tab 3: Troubleshoot -->
+    <div id="tab3" class="tab-content">
+      <h2>Troubleshooting Guide</h2>
+
+      <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">🎤 Microphone Issues</button>
+      <div class="panel">
+        <ul>
+          <li>Check Windows mic settings</li>
+          <li>Update drivers</li>
+          <li>Use <code>Microphone.list_microphone_names()</code></li>
+        </ul>
+      </div>
+
+      <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">🐍 Python Path Errors</button>
+      <div class="panel">
+        <ol>
+          <li>Ensure Python is added to PATH</li>
+          <li>Try using <code>py</code> command</li>
+        </ol>
+      </div>
+
+      <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">📦 Module Import Errors</button>
+      <div class="panel">
+        <pre><code>pip install -r requirements.txt --force-reinstall</code></pre>
+        <p>Or install manually if needed</p>
+      </div>
+
+      <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">🔇 No Voice Output</button>
+      <div class="panel">
+        <ul>
+          <li>Check system sound settings</li>
+          <li>Try <code>pyttsx3.init()</code> test</li>
+        </ul>
+      </div>
+
+      <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">⚡ Performance Optimization</button>
+      <div class="panel">
+        <ul>
+          <li>Close background apps</li>
+          <li>Use SSD</li>
+          <li>Disable antivirus scan for JARVIS</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Tab 4: FAQ -->
+    <div id="tab4" class="tab-content">
+      <h2>Frequently Asked Questions</h2>
+
+      <div id="dynamicFAQs"></div>
+
+      <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">What makes JARVIS different?</button>
+      <div class="panel">
+        <p>Fully offline, made for India, open-source. No cloud needed!</p>
+      </div>
+
+      <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">Can it work without internet?</button>
+      <div class="panel">
+        <p>Yes, including voice recognition and TTS. Internet is optional.</p>
+      </div>
+
+      <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">Is it free to use?</button>
+      <div class="panel">
+        <p>Yes! MIT-licensed, open to everyone.</p>
+      </div>
+
+      <button class="accordion" onclick="toggleAccordion(this)" aria-expanded="false">Which languages are supported?</button>
+      <div class="panel">
+        <p>English is supported now. Hindi is in development.</p>
+      </div>
+    </div>
+  </main>
+
+  <div class="center-button">
+    <button onclick="launchJARVIS()" class="pulse" aria-label="Launch JARVIS" tabindex="0">🚀 Launch JARVIS</button>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
